--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "backend_api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.2",
-    "express": "^4.17.3",
-    "express-validator": "^6.14.0",
-    "mongoose": "^6.2.9"
-  }
+    "name": "backend_api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node app.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.19.2",
+        "express": "^4.17.3",
+        "express-validator": "^6.14.0",
+        "mongoose": "^6.2.9"
+    }
 }
